# simpleCmd

./: .clangd  .gitignore  CMakeLists.txt  CommandParse.c  CommandParse.h  DBG_macro.h  LICENSE  README.md  build.bat  cmdTree_v2.0.md  compile_commands.json  main.c  main.h  readme.md  simpleCmd_node.md  simpleCmd_table.md  test_cmdTree.c  test_tokenizer.c  toolchain-llvm-mingw.cmake  改进方向.md  食用手册.md
.cache/clangd/index/: CommandParse.h.329510106D0FCF4D.idx  CommandParseNode.c.15DE91FA3B6E3042.idx  CommandParseTable.c.6F06B676AD67DDD6.idx  DBG_macro.h.A880F1D3DA8014E7.idx  cmdUserStringParse.h.7C7F071615902873.idx  cmdUserStringParser.c.B41F284A08616E17.idx  main.c.0413D501D2B14EF2.idx
include/: CommandParse.h  CommandParseTree.h  DBG_macro.h  cmdTreeCfg.h  cmdUserStringParse.h
sources/: CommandParseNode.c  CommandParseTable.c  CommandParseTree.c  cmdUserStringParser.c  main.c
test-log/: Windows PowerShell.txt  Windows PowerShell2.txt  Windows PowerShell3.txt
